alteração na cor da cobra

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
 
 /* Estilos para a cabeça da cobra */
 .play-board .head {
-  background: #55647b; /* Define a cor de fundo da cabeça da cobra */
+  background: #1e74f6; /* Define a cor de fundo da cabeça da cobra */
 }
 
 /* Estilos para a comida */
